--- a/style.css
+++ b/style.css
@@ -1,3 +1,42 @@
+body{
+    font-family: 'Lato', sans-serif;
+}
+
 .hienthicautraloi{
     display: none !important;
+}
+
+.question{
+    margin-left: 15%;
+    border: 1px solid;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px #dddd;
+}
+
+.answer{
+    padding: 0;
+    margin: 0;
+}
+
+.answer li{
+    list-style: none;
+    font-size: 20px;
+    padding: 10px;
+}
+
+#submit{
+    display: block;
+    margin: 0 auto;
+    border-radius: none;
+}
+
+.tieude{
+    margin: 0;
+}
+
+.redotest{
+    display: block;
+    margin: 0 auto;
+    border-radius: none;
 }
